fixed status concurrency
